--- a/package.json
+++ b/package.json
@@ -20,7 +20,32 @@
     "generate": "pnpm --filter @arcadia-eternity/schema run generate",
     "cli": "tsx ./bin/cli.ts",
     "web:dev": "pnpm --filter @arcadia-eternity/web-ui run dev",
-    "storybook": "pnpm --filter @arcadia-eternity/web-ui run storybook"
+    "storybook": "pnpm --filter @arcadia-eternity/web-ui run storybook",
+    "test": "run-s test:types test:units test:integration",
+    "test:types": "tsc --noEmit",
+    "test:units": "jest",
+    "test:integration": "run-s test:cli test:sql test:database test:server",
+    "test:cli": "bash examples/test-cli-help.sh",
+    "test:sql": "bash examples/test-sql-syntax.sh",
+    "test:database": "tsx packages/database/examples/test-database.ts",
+    "test:server": "bash examples/test-server-startup.sh",
+    "test:battle-reports": "run-s test:database test:server:battle-reports test:battle-recording",
+    "test:battle-reports:final": "bash examples/test-final-battle-reports.sh",
+    "test:server:battle-reports": "bash examples/test-battle-reports-api.sh",
+    "test:battle-recording": "tsx examples/test-battle-report-recording.ts",
+    "test:battle-fix": "bash examples/test-battle-report-fix.sh",
+    "test:battle-listener": "bash examples/test-battle-listener-fix.sh",
+    "test:config": "bash examples/verify-port-config.sh",
+    "dev:server": "tsx bin/cli.ts server --port 8102",
+    "dev:server:battle-reports": "tsx bin/cli.ts server --port 8102 --enable-battle-reports",
+    "debug:battle-reports": "bash examples/debug-battle-reports.sh",
+    "fix:rls": "bash examples/fix-rls-policies.sh",
+    "fix:rls:apply": "bash examples/apply-rls-policies.sh",
+    "fix:rls:disable": "bash examples/disable-rls-temporarily.sh",
+    "test:rls": "bash examples/test-rls-fix.sh",
+    "test:rls:after-disable": "bash examples/test-after-rls-disable.sh",
+    "test:rls:new": "bash examples/test-new-rls-policies.sh",
+    "start:example": "bash examples/start-server-with-battle-reports.sh"
   },
   "dependencies": {
     "@arcadia-eternity/battle": "workspace:^",
@@ -28,6 +53,7 @@
     "@arcadia-eternity/console": "workspace:^",
     "@arcadia-eternity/const": "workspace:^",
     "@arcadia-eternity/data-repository": "workspace:^",
+    "@arcadia-eternity/database": "workspace:^",
     "@arcadia-eternity/fsloader": "workspace:^",
     "@arcadia-eternity/interface": "workspace:^",
     "@arcadia-eternity/local-adapter": "workspace:^",
