--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@arcadia-eternity/server",
+  "name": "@arcadia-eternity/database",
   "version": "1.0.0",
-  "description": "",
+  "description": "Database layer for Arcadia Eternity battle reports",
   "private": true,
   "type": "module",
   "repository": {
@@ -19,22 +19,26 @@
     "watch": "run-p watch:code watch:types",
     "build:types": "tsc --emitDeclarationOnly"
   },
-  "keywords": [],
+  "keywords": [
+    "database",
+    "supabase",
+    "battle-reports"
+  ],
   "author": "yuuinih",
   "license": "MIT",
   "dependencies": {
-    "@arcadia-eternity/battle": "workspace:^",
     "@arcadia-eternity/const": "workspace:^",
-    "@arcadia-eternity/database": "workspace:^",
-    "@arcadia-eternity/parser": "workspace:^",
-    "@arcadia-eternity/protocol": "workspace:^",
-    "@arcadia-eternity/schema": "workspace:^",
+    "@supabase/supabase-js": "^2.49.10",
     "nanoid": "^5.1.5",
-    "pino": "^9.6.0",
-    "socket.io": "^4.8.1",
     "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@types/node": "^22.15.17"
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@types/node": "^22.15.17",
+    "rollup": "^4.40.2",
+    "rollup-plugin-node-externals": "^8.0.0",
+    "tslib": "^2.8.1",
+    "typescript": "^5.8.3"
   }
 }
