--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -12,7 +12,8 @@
     "verbatimModuleSyntax": true,
     "types": ["node"],
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+    "skipLibCheck": true
   },
   "include": ["./src/**/*"],
   "exclude": ["./node_modules", "./dist"]
