--- a/.github/workflows/publish-packages.yaml
+++ b/.github/workflows/publish-packages.yaml
@@ -42,6 +42,6 @@ jobs:
         run: pnpm build
 
       - name: Publish to GitHub Packages
-        run: pnpm -r publish --access public
+        run: pnpm -r publish --access public --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
