ci: exclude web-ui changes from Docker build triggers

--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -6,6 +6,7 @@ on:
     branches: [main, master]
     paths:
       - 'packages/**'
+      - '!packages/web-ui/**'
       - 'data/**'
       - 'bin/**'
       - 'pnpm-lock.yaml'
